httpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  labels:
    app: httpd
    version: "1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
        version: "1.0"
    spec:
      containers:
      - name: httpd
        image: httpd
        ports:
        - name: http-server
          containerPort: 80
