httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
  labels:
    app: httpd
spec:
  ports:
  - port: 8000
    targetPort: 80
  selector:
    app: httpd
  type: NodePort
#  type: ClusterIP
