nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
  - port: 8000
    targetPort: 80
  selector:
    app: nginx
  type: NodePort
