httpd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd
  annotations:
    haproxy.router.openshift.io/rewrite-target : /
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: yourdomain
    http:
      paths:
      - path: /apache
        pathType: Prefix
        backend:
          service:
            name: httpd
            port:
              number: 8000
